[project]
name = "content-supply"
version = "0.1.0"
description = "Content supply platform — multi-strategy crawling, LLM rewriting, and content pool management for recommendation systems"
requires-python = ">=3.10"
dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    # Redis
    "redis>=5.0.0",
    # HTTP client
    "httpx>=0.27.0",
    # RSS parsing
    "feedparser>=6.0.0",
    # Web scraping
    "trafilatura>=1.8.0",
    "beautifulsoup4>=4.12.0",
    # LLM
    "openai>=1.12.0",
    # Scheduler
    "apscheduler>=3.10.0",
    # Config
    "pyyaml>=6.0",
    # CLI
    "click>=8.1.0",
    # Utilities
    "python-slugify>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[project.scripts]
supply = "content_supply.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
include = ["content_supply*"]
